samples/_failures_safe/1761441672_c14fa4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_858b73c8.c: In function ‘main’:
./samples/SAFE/__tmp_858b73c8.c:157:21: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  157 |                     print
      |                     ^~~~~
      |                     printf
./samples/SAFE/__tmp_858b73c8.c:157:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_858b73c8.c:157:26: error: expected ‘;’ at end of input
  157 |                     print
      |                          ^
      |                          ;
./samples/SAFE/__tmp_858b73c8.c:157:21: error: expected declaration or statement at end of input
  157 |                     print
      |                     ^~~~~
./samples/SAFE/__tmp_858b73c8.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_858b73c8.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_858b73c8.c:157:21: error: expected declaration or statement at end of input
